# serde-influxlp

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  influxlp-serde-ci.yml  lint.yml  release.yml  test.yml
src/: builder.rs  datatypes.rs  de.rs  error.rs  lib.rs  reader.rs  ser.rs  writer.rs
src/reader/: datatypes.rs  io.rs  mod.rs  slice.rs  traits.rs
src/value/: datatypes.rs  de.rs  mod.rs  ser.rs
